# devpi-poetry

./: .gitignore  LICENSE  README.md  pyproject.toml
devpi_poetry/: __init__.py  devpi_push.py  use_current_devpi_index.py
